# rust-grpc-up-and-running

./: README.md
examples/ecommerce/: Cargo.toml  README.md  build.rs
examples/ecommerce/proto/: productInfo.proto
examples/ecommerce/src/: client.rs  ecommerce.rs  server.rs
