[package]
name = "ecommerce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.9"
tokio = { version = "1.27.0", features = ["full"] }
tonic = "0.9.2"


[[bin]]
name = "server"
path = "./src/server.rs"

[[bin]]
name = "client"
path = "./src/client.rs"

[build-dependencies]
tonic-build = "0.9.2"
